--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -6,7 +6,7 @@
 
 
 <h:head>
-<title>App UI Grader assignment management</title>
+<title>App UI Grader: Assignment management</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"></meta>
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"></meta>
