add jpg gif upload compatibility to admin upload page
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/adminLogin.xhtml
+++ b/DatabaseOperation/web/adminLogin.xhtml
@@ -5,7 +5,7 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-<title>App UI Grader Admin Login</title>
+<title>App UI Grader: Admin Login</title>
 
 <link rel="stylesheet/less" type="text/css" href="css/adminLogin.less" ></link>
     
