--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -6,7 +6,7 @@
 
 <h:head>
 
-<title>App UI Grader: Assignment display</title>
+<title>App UI Grader: Assignment Display</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"></meta>
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"></meta>
