--- a/DatabaseOperation/web/print.xhtml
+++ b/DatabaseOperation/web/print.xhtml
@@ -6,7 +6,7 @@
 
 <h:head>
 
-<title>Comparison Results</title>
+<title>App UI Grader: Comparison Results</title>
 
 <link rel="stylesheet/less" type="text/css" href="css/print.less" ></link>
     
