fix the admin update button image
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -326,7 +326,7 @@ function zipFileIfEmpty(){
             
 			
 			<p:outputPanel layout="block" style="position:absolute;top:400px;left:55px">
-			<h:commandButton type="submit" onmouseover="this.src ='images/upload_s1.png'" onmouseout="this.src='images/upload_s0.png'" onmousedown="this.src='images/upload_s2.png'"  image="/images/upload_s0.png"  onclick="update_page02.hide()"  action="#{controller.updateExist(assignment.selectedAssignment.assignmentID)}" />
+			<h:commandButton type="submit" onmouseover="this.src ='images/update_s1.png'" onmouseout="this.src='images/update_s0.png'" onmousedown="this.src='images/update_s2.png'"  image="/images/update_s0.png"  onclick="update_page02.hide()"  action="#{controller.updateExist(assignment.selectedAssignment.assignmentID)}" />
 			</p:outputPanel>
 			
 			<p:outputPanel layout="block" style="position:absolute;top:400px;right:59px">
