add "report bug" text in toolbar page
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/toolBar.xhtml
+++ b/DatabaseOperation/web/toolBar.xhtml
@@ -26,9 +26,21 @@
 	<h:commandLink value="Help"  style="color:#212121; font-family:Tahoma; font-size:14;text-decoration:none;"/>
 	 </h:form>
 	</div>
-	<div style="float:right;position:relative;top:663px;left:100px;">
-	    	    <h:form>
-    	<h:commandLink action="about.xhtml" value="About" style="color:#0CBC17; font-size:14;font-family:Tahoma;text-decoration:none;" />
-    </h:form>
+	
+	<div style="float:right;position:relative;top:630px;right:10px;">
+	 <h:form>
+	    	  <h:commandLink action="mailto:appuigrader@gmail.com?Subject=Hello%20again" value="Report Bug" style="color:#0CBC17; font-size:13px;font-family:Tahoma;text-decoration:none;" />
+       <p:spacer width="24" height="10" /> 
+ 
+    	<h:commandLink action="profileLoading.xhtml" value="About" style="color:#0CBC17; font-size:13px;font-family:Tahoma;text-decoration:none;" />
+   </h:form>
 	</div>
+	
+	
+
+	    
+    	
+	
+	
+	
 </ui:composition>
