--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -141,7 +141,7 @@ function zipFileIfEmpty(){
         </p:column>
         
         <p:column style="text-align: right;" headerText="Point" sortBy="#{a.assignmentPoint}">
-        	#{a.assignmentPoint} px
+        	#{a.assignmentPoint} pts
         </p:column>
                 
        	<p:column style="text-align: center;" headerText="Attempts">  
