--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -120,7 +120,7 @@ function zipFileIfEmpty(){
         </p:column>
         
         <p:column style="text-align: right; width:85px;" headerText="Point" sortBy="#{a.point}">
-        	#{a.point} px
+        	#{a.point} pts
         </p:column>
         
         <f:facet name="footer">  
@@ -354,8 +354,7 @@ function zipFileIfEmpty(){
 
 	<ui:include src="/toolBarAdmin.xhtml" />
 </div>
-	
-  	
+
 </p:outputPanel>
 
 
