fix description dispaly

--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -133,7 +133,7 @@ function zipFileIfEmpty(){
         </p:column>
 
         <p:column headerText="Description">  
-            #{a.assignmentDes}  
+            #{a.assignmentShortDes}  
         </p:column>
         
         <p:column headerText="Rating" sortBy="#{a.assignmentRating}">
