--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -112,7 +112,7 @@ function zipFileIfEmpty(){
         </p:column>
         
         <p:column headerText="Description">
-            #{a.description}
+            #{a.shortDescription}
         </p:column>
         
         <p:column style="width:250px !important;" headerText="Rating" sortBy="#{a.rating}">
