--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -153,7 +153,7 @@ function zipFileIfEmpty(){
         </p:column>
         
         <f:facet name="footer">  
-             <p:commandButton id="v" value="Description Detail" icon="ui-icon-search" update=":dialog" oncomplete="dlg.show()"/> 
+             <p:commandButton id="v" value="Assignment Detail" icon="ui-icon-search" update=":dialog" oncomplete="dlg.show()"/> 
 			 <p:commandButton id="v1" value="Preview Image" icon="ui-icon-calculator" update=":screenshot" oncomplete="lightbox.show()"/>
              <p:commandButton id="v2" value="Comaprison History" icon="ui-icon-bookmark" update=":dlgSingleLogDisplay" oncomplete="dlgSingleLog.show()" />
              <p:commandButton id="v3" value="New Comparison" icon="ui-icon-extlink" update=":updateDialog" oncomplete="updateUI.show()"/>
@@ -206,10 +206,10 @@ function zipFileIfEmpty(){
 	
 	
 	
-		<p:dialog  resizable="false" widgetVar="updateUI" id="updateDialog" width="440" height="300" modal="true" showHeader="false" draggable="false">  
-		<p:outputPanel style="background-image:url(images/compare_assignment.png);height:282px;width:412px" layout="block">
+		<p:dialog style="background-color: transparent;" resizable="false" widgetVar="updateUI" id="updateDialog" width="340" height="300" modal="true" showHeader="false" draggable="false">  
+		<p:outputPanel style="background-image:url(images/compare_assignment.png);height:272px;width:312px" layout="block">
         <h:form enctype="multipart/form-data" id="formCompare">
-        <p:outputPanel layout="block" style="position:absolute;top:110px;left:45px">
+        <p:outputPanel layout="block" style="position:absolute;top:135px;left:45px">
     		<p:fileUpload fileUploadListener="#{compare.handleZipUpload}"
             	mode="advanced"
             	sizeLimit="10000000" 
@@ -222,15 +222,18 @@ function zipFileIfEmpty(){
             	widgetVar="fileuplaod_wgt"
             	/>
  			
-			</p:outputPanel>
+			</p:outputPanel  >
+		<p:outputPanel layout="block" styleClass="filename" >
+			
 			<h:outputText id="out1" value="#{compare.selectedFilename}" /> 
-			<p:outputPanel layout="block" style="position:absolute;top:180px;left:75px">
+			</p:outputPanel  >
+			<p:outputPanel layout="block" style="position:absolute;top:220px;left:40px">
 			<h:commandButton id="next" type="submit" action="#{compare.tempUpload(openid.openIdEmail,gradestudentBean.selectedAssignment.assignmentDirectory, gradestudentBean.selectedAssignment.assignmentID)}" />
 			</p:outputPanel>
 			
-			<h:commandButton type="button" style="position:absolute;top:180px;left:75px;z-index:99;width:128px;height:44px;" onmouseover="this.src ='images/upload_s1.png'" onmouseout="this.src='images/upload_s0.png'" onmousedown="this.src='images/upload_s2.png'" image="/images/upload_s0.png" onclick="zipFileIfEmpty();"/>
+			<h:commandButton type="button" style="position:absolute;top:220px;left:40px;z-index:99;width:126px;height:50px;" onmouseover="this.src ='images/upload_s1.png'" onmouseout="this.src='images/upload_s0.png'" onmousedown="this.src='images/upload_s2.png'" image="/images/upload_s0.png" onclick="zipFileIfEmpty();"/>
 			
-			<p:outputPanel layout="block" style="position:absolute;top:180px;right:59px">
+			<p:outputPanel layout="block" style="position:absolute;top:220px;right:39px">
 			<h:commandButton type="button" onmouseover="this.src ='images/cancel_s1.png'" onmouseout="this.src='images/cancel_s0.png'" onmousedown="this.src='images/cancel_s2.png'"  image="/images/cancel_s0.png" onclick="updateUI.hide()" action="#{compare.reset()}"/>
 			</p:outputPanel>
 			
