--- a/DatabaseOperation/web/toolBarAdmin.xhtml
+++ b/DatabaseOperation/web/toolBarAdmin.xhtml
@@ -14,7 +14,7 @@
 
  	<div style="float:right;position:relative;margin-right:13px;">
     	    <h:form>
-    	<h:commandLink action="profileLoading.xhtml" value="Profile  " style="color:#212121;  font-family:Tahoma; font-size:14;text-decoration:none;" />
+    	<h:commandLink action="#" value="Profile  " style="color:#212121;  font-family:Tahoma; font-size:14;text-decoration:none;" />
     		
 	<p:spacer width="20" height="10" /> 
 	
