--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -15,7 +15,6 @@
 
 
 <link rel="stylesheet/less" type="text/css" href="css/assignmentDisplayStudent.less" ></link>
-
 <script src="js/less.js" type="text/javascript"></script>
 
 
@@ -72,9 +71,13 @@ function checkValue(){
 
 function zipFileIfEmpty(){
 	var value = $('[id="formCompare:out1"]').html();
+	var label = $('[id="formCompare:errorMsg"]');
+	label.empty();
 	if(value=="Choose a file..."){
-		alert(value);
-		console.log("need");
+		var error = $('<div>Please upload a file</div>');
+		error.css('color','red');
+		error.appendTo(label);
+		//		openDialog('warning','please upload a file');
 	}else{
 		$('[id="formCompare:next"]').trigger('click');
 	}
@@ -227,6 +230,9 @@ function zipFileIfEmpty(){
 			
 			<h:outputText id="out1" value="#{compare.selectedFilename}" /> 
 			</p:outputPanel  >
+			
+			<p:outputPanel id="errorMsg" layout="block" style="position:absolute;top:115px;left:40px;height:25px;width:100%" />
+			
 			<p:outputPanel layout="block" style="position:absolute;top:220px;left:40px">
 			<h:commandButton id="next" type="submit" action="#{compare.tempUpload(openid.openIdEmail,gradestudentBean.selectedAssignment.assignmentDirectory, gradestudentBean.selectedAssignment.assignmentID)}" />
 			</p:outputPanel>
