fixed student upload button not triggered

--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -72,6 +72,7 @@ function checkValue(){
 function zipFileIfEmpty(){
 	var value = $('[id="formCompare:out1"]').html();
 	var label = $('[id="formCompare:errorMsg"]');
+	var button = $('[id="formCompare:next"]');
 	label.empty();
 	if(value=="Choose a file..."){
 		var error = $('<div>Please upload a file</div>');
@@ -80,7 +81,7 @@ function zipFileIfEmpty(){
 		error.fadeOut(1000);
 		//		openDialog('warning','please upload a file');
 	}else{
-		$('[id="formCompare:next"]').trigger('click');
+		button.trigger('click');
 	}
 }
 
@@ -238,7 +239,9 @@ function zipFileIfEmpty(){
 			<h:commandButton id="next" type="submit" action="#{compare.tempUpload(openid.openIdEmail,gradestudentBean.selectedAssignment.assignmentDirectory, gradestudentBean.selectedAssignment.assignmentID)}" />
 			</p:outputPanel>
 			
-			<h:commandButton type="button" style="position:absolute;top:220px;left:40px;z-index:99;width:126px;height:50px;" onmouseover="this.src ='images/upload_s1.png'" onmouseout="this.src='images/upload_s0.png'" onmousedown="this.src='images/upload_s2.png'" image="/images/upload_s0.png" onclick="zipFileIfEmpty();"/>
+			<p:outputPanel layout="block" style="position:absolute;top:220px;left:40px;z-index:99">
+			<h:commandButton type="button" onmouseover="this.src ='images/upload_s1.png'" onmouseout="this.src='images/upload_s0.png'" onmousedown="this.src='images/upload_s2.png'" image="/images/upload_s0.png" onclick="zipFileIfEmpty();"/>
+			</p:outputPanel>
 			
 			<p:outputPanel layout="block" style="position:absolute;top:220px;right:39px">
 			<h:commandButton type="button" onmouseover="this.src ='images/cancel_s1.png'" onmouseout="this.src='images/cancel_s0.png'" onmousedown="this.src='images/cancel_s2.png'"  image="/images/cancel_s0.png" onclick="updateUI.hide()" action="#{compare.reset()}"/>
