--- a/DatabaseOperation/web/print.xhtml
+++ b/DatabaseOperation/web/print.xhtml
@@ -12,6 +12,45 @@
     
 <script src="js/less.js" type="text/javascript"></script>
 
+<style type="text/css">
+
+/* 	.button {
+	background:url(images/Button.png)!important;
+	background-repeat:no-repeat;
+	border-radius:0;
+	height:16px;
+	width:16px;
+}	
+
+.label {
+	background:url(images/Label.png)!important;
+	border-radius:0;
+	height:16px;
+	width:16px;
+}	
+
+.hori {
+	background:url(images/HorizontalArrangement.png)!important;
+	border-radius:0;
+	height:16px;
+	width:16px;
+}	
+
+.vert {
+	background:url(images/VerticalArrangement.png)!important;
+	border-radius:0;
+	height:16px;
+	width:16px;
+}	
+
+.table {
+	background:url(images/TableArrangement.png)!important;
+	border-radius:0;
+	height:16px;
+	width:16px;
+}
+ */
+</style>
 
 </h:head>
 
