fix bug in mail
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -212,7 +212,7 @@ function zipFileIfEmpty(){
 		<p:dialog style="background-color: transparent;" resizable="false" widgetVar="updateUI" id="updateDialog" width="340" height="300" modal="true" showHeader="false" draggable="false">  
 		<p:outputPanel style="background-image:url(images/compare_assignment.png);height:272px;width:312px" layout="block">
         <h:form enctype="multipart/form-data" id="formCompare">
-        <p:outputPanel layout="block" style="position:absolute;top:135px;left:45px">
+        <p:outputPanel layout="block" style="position:absolute;top:145px;left:45px">
     		<p:fileUpload fileUploadListener="#{compare.handleZipUpload}"
             	mode="advanced"
             	sizeLimit="10000000" 
@@ -231,7 +231,7 @@ function zipFileIfEmpty(){
 			<h:outputText id="out1" value="#{compare.selectedFilename}" /> 
 			</p:outputPanel  >
 			
-			<p:outputPanel id="errorMsg" layout="block" style="position:absolute;top:115px;left:40px;height:25px;width:100%" />
+			<p:outputPanel id="errorMsg" layout="block" style="position:absolute;top:115px;left:46px;height:25px;width:150px" />
 			
 			<p:outputPanel layout="block" style="position:absolute;top:220px;left:40px">
 			<h:commandButton id="next" type="submit" action="#{compare.tempUpload(openid.openIdEmail,gradestudentBean.selectedAssignment.assignmentDirectory, gradestudentBean.selectedAssignment.assignmentID)}" />
