--- a/DatabaseOperation/web/toolBar.xhtml
+++ b/DatabaseOperation/web/toolBar.xhtml
@@ -29,9 +29,10 @@
 	
 	<div style="float:right;position:relative;top:630px;right:10px;">
 	 <h:form>
-	    	  <h:commandLink action="mailto:appuigrader@gmail.com?Subject=Hello%20again" value="Report Bug" style="color:#0CBC17; font-size:13px;font-family:Tahoma;text-decoration:none;" />
+	    <a  style="color:#0CBC17; font-size:13px;font-family:Tahoma;text-decoration:none;" href="mailto:appuigrader@gmail.com?Subject=Report%20Bug.">
+Report Bug</a>	 
        <p:spacer width="24" height="10" /> 
- 
+
     	<h:commandLink action="profileLoading.xhtml" value="About" style="color:#0CBC17; font-size:13px;font-family:Tahoma;text-decoration:none;" />
    </h:form>
 	</div>
