--- a/DatabaseOperation/web/about.xhtml
+++ b/DatabaseOperation/web/about.xhtml
@@ -8,8 +8,8 @@
 <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
 
 <p:ring value="#{ringBean.coders}" var="coder">
-	<p:outputPanel layout="block">
-		<h:outputText escape="false" value="#{coder}"></h:outputText>
+	<p:outputPanel layout="block" style="border-style=:solid;border-size:1px;">
+		<h:outputText escape="false" value="#{coder}" />
 	</p:outputPanel>
 </p:ring>
 </h:body>
