--- a/DatabaseOperation/web/toolBarAdmin.xhtml
+++ b/DatabaseOperation/web/toolBarAdmin.xhtml
@@ -28,7 +28,7 @@
 	    <a  style="color:#0CBC17; font-size:14px;font-family:Tahoma;text-decoration:none;" href="mailto:appuigrader@gmail.com?Subject=Report%20Bug.">
 Report Bug</a>	 
        <p:spacer width="24" height="10" /> 
-       <h:commandLink value="Help"  style="color:#0CBC17; font-family:Tahoma; font-size:14px;text-decoration:none;"/>
+       <h:commandLink value="Help"  action="help.xhtml" style="color:#0CBC17; font-family:Tahoma; font-size:14px;text-decoration:none;"/>
 	 <p:spacer width="24" height="10" /> 
 
     	<h:commandLink action="about.xhtml" value="About" style="color:#0CBC17; font-size:14px;font-family:Tahoma;text-decoration:none;" />
