edit favicon path

--- a/DatabaseOperation/web/indext.xhtml
+++ b/DatabaseOperation/web/indext.xhtml
@@ -14,7 +14,7 @@
 <link rel="stylesheet/less" type="text/css" href="css/indext.less" ></link>
     
 <script src="js/less.js" type="text/javascript"></script>
-<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico"></link>
+<link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
    
     </h:head>
     <h:body>
