add favicon for all pages

--- a/DatabaseOperation/web/adminLoginLoading.xhtml
+++ b/DatabaseOperation/web/adminLoginLoading.xhtml
@@ -9,6 +9,7 @@
  <title>App UI Grader loading</title>
 
 <meta http-equiv="refresh" content="1; URL=assignmentsDisplay.xhtml" />
+<link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
 </h:head>
 <h:body>
 
