--- a/DatabaseOperation/web/help.xhtml
+++ b/DatabaseOperation/web/help.xhtml
@@ -6,6 +6,7 @@
     <title>App UI Grader: Help</title>
     
     <link rel="stylesheet/less" type="text/css" href="css/help.less" ></link>
+    <link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
     
 <script src="js/less.js" type="text/javascript"></script>
 
