--- a/DatabaseOperation/web/login.xhtml
+++ b/DatabaseOperation/web/login.xhtml
@@ -8,6 +8,7 @@
   <title>App UI Grader: Student Login</title>
 
 <link rel="stylesheet/less" type="text/css" href="css/login.less" ></link>
+<link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
     
 <script src="js/less.js" type="text/javascript"></script>
 
