--- a/DatabaseOperation/web/loginLoading.xhtml
+++ b/DatabaseOperation/web/loginLoading.xhtml
@@ -6,7 +6,7 @@
 <h:head>
 <title>App UI Grader loading</title>
 
-
+<link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
 <meta http-equiv="refresh" content="1; URL=assignmentDisplayStudent.xhtml" />
 </h:head>
 <h:body>
