--- a/DatabaseOperation/web/openid.xhtml
+++ b/DatabaseOperation/web/openid.xhtml
@@ -7,6 +7,7 @@
     <h:head>
         <title>Open ID authentication successful.</title>
         <meta http-equiv="refresh" content="0; URL=loginLoading.xhtml" />
+        <link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
         
     </h:head>
     <h:body>
