--- a/DatabaseOperation/web/profileLoading.xhtml
+++ b/DatabaseOperation/web/profileLoading.xhtml
@@ -7,6 +7,7 @@
 
 <title>App UI Grader Loading</title>
 <meta http-equiv="refresh" content="1; URL=profileDisplay.xhtml" />
+<link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
 </h:head>
 <h:body>
 
