--- a/DatabaseOperation/web/result.html
+++ b/DatabaseOperation/web/result.html
@@ -5,6 +5,7 @@
 <title>App UI Grader: Comapre Results</title>
 
 <link href="result.css" rel="stylesheet" type="text/css" />
+<link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
 </head>
 
 <body>
