--- a/DatabaseOperation/web/adminLogin.xhtml
+++ b/DatabaseOperation/web/adminLogin.xhtml
@@ -7,6 +7,7 @@
 <title>App UI Grader: Admin Login</title>
 
 <link rel="stylesheet/less" type="text/css" href="css/adminLogin.less" ></link>
+<link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
     
 <script src="js/less.js" type="text/javascript"></script>
 </h:head>
