--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -15,6 +15,7 @@
 
 
 <link rel="stylesheet/less" type="text/css" href="css/assignmentDisplayStudent.less" ></link>
+<link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
 <script src="js/less.js" type="text/javascript"></script>
 
 
