--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -14,6 +14,7 @@
 <meta http-equiv="Expires" content="0"></meta>
 
 <link rel="stylesheet/less" type="text/css" href="css/assignmentDisplay.less" ></link>
+<link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
     
 <script src="js/less.js" type="text/javascript"></script>
 	
