--- a/DatabaseOperation/web/blockPrint.xhtml
+++ b/DatabaseOperation/web/blockPrint.xhtml
@@ -9,6 +9,7 @@
 <title>App UI Grader: Comparison Block View</title>
 
 <link rel="stylesheet/less" type="text/css" href="css/blockPrint.less" ></link>
+<link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
     
 <script src="js/less.js" type="text/javascript"></script>
 
