--- a/DatabaseOperation/web/profileDisplay.xhtml
+++ b/DatabaseOperation/web/profileDisplay.xhtml
@@ -7,6 +7,7 @@
 <h:head>
 <title>App UI Grader: Profile</title>
 <link rel="stylesheet/less" type="text/css" href="css/profileDisplay.less" ></link>
+<link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
     
 <script src="js/less.js" type="text/javascript"></script>
 
