--- a/DatabaseOperation/web/register.xhtml
+++ b/DatabaseOperation/web/register.xhtml
@@ -9,6 +9,7 @@
         <title>App UI Grader: Register</title>
 
 <link rel="stylesheet/less" type="text/css" href="css/register.less" ></link>
+<link rel="shortcut icon" type="image/x-icon" href="/appuigrader/images/favicon.ico"></link>
     
 <script src="js/less.js" type="text/javascript"></script>
         </h:head>
