--- a/DatabaseOperation/web/toolBar.xhtml
+++ b/DatabaseOperation/web/toolBar.xhtml
@@ -29,8 +29,8 @@
 	
 	<div style="float:right;position:relative;top:630px;right:10px;">
 	 <h:form>
-	    <a  style="color:#0CBC17; font-size:14px;font-family:Tahoma;text-decoration:none;" href="mailto:appuigrader@gmail.com?Subject=Report%20Bug.">
-Report Bug</a>	 
+    		<h:commandLink  action="help.xhtml" value="Help"  style="color:#0CBC17; font-family:Tahoma; font-size:14px;text-decoration:none;"/>
+
        <p:spacer width="24" height="10" /> 
        <h:commandLink value="Help"  action="help.xhtml" style="color:#0CBC17; font-family:Tahoma; font-size:14px;text-decoration:none;"/>
 	 <p:spacer width="24" height="10" /> 
